調整table 新增優惠頁面 修正row  style

--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
     <section class="section">
       <div class="content contact">
         <div class="main-title l-font">
-          <div class="s-font">ABOUT BROADWAY</div>
-          <div>影城介紹</div>
+          <div class="s-font">CONTACT US</div>
+          <div>聯繫我們</div>
         </div>
         <div class="tab actions">
           <button class="actions-btn tab-item active" id="tab1">公館百老匯影城</button>
@@ -54,15 +54,49 @@
         <div class="tab-container">
           <div class="content-row">
             <div class="row-left row-5">
-              <div class="info">
-                
-              </div>
+              <ul class="info">
+                <li><span class="l-font">影城位置</span>台北市文山區羅斯福路四段200號</li>
+                <li><span class="l-font">聯繫電話</span>02-8663-6128</li>
+                <li><span class="l-font">聯繫信箱</span>borad.way200@msa.hinet.net</li>
+                <li>
+                  <span class="l-font">交通方式</span>
+                  <label>捷運
+                    <div>新店綠線公館站二號出口徒步十分鐘</div>
+                  </label>
+                  <label>公車
+                    <div>306、306區、307、604、605快、622、652、棕9、紅25、208、211、246</div>
+                  </label>
+                  <label>自行開車
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consectetur, ab voluptatum neque quis
+                      esse repellendus minus, aliquid optio in quasi natus laboriosam, similique fugiat ipsam sed quod
+                      vitae error tempore?</div>
+                  </label>
+                </li>
+                <li>
+                  <span class="l-font">停車資訊</span>
+                  <label>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, tenetur.
+                  </label>
+                </li>
+              </ul>
             </div>
-            <div class="row-right row-5 iframe-rwd">
-              <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.6848890979186!2d121.5345993150057!3d25.010821183983172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9f5598a583d%3A0x546b6469753aa4d!2z55m-6ICB5Yyv5b2x5Z-O!5e0!3m2!1szh-TW!2stw!4v1656583143387!5m2!1szh-TW!2stw"
-                width="600" height="300" style="border:0;" allowfullscreen="" 
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="row-right row-5">
+              <div class="iframe-rwd">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3615.6848890979186!2d121.5345993150057!3d25.010821183983172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a9f5598a583d%3A0x546b6469753aa4d!2z55m-6ICB5Yyv5b2x5Z-O!5e0!3m2!1szh-TW!2stw!4v1656583143387!5m2!1szh-TW!2stw"
+                  width="600" height="300" style="border:0;" allowfullscreen=""
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+              <div class="actions">
+                <a href="https://goo.gl/maps/iwQehSV4vAyBZF2w7" target="_blank" rel="noopener noreferrer">
+                  <button type="button" class="googlemap actions-btn">
+                    <span class="material-icons">
+                      near_me
+                    </span>GOOGLE MAP
+                  </button>
+                </a>
+
+              </div>
             </div>
           </div>
         </div>
