meta 調整 rwd調整 第一版完成

--- a/book-step3.html
+++ b/book-step3.html
@@ -2,13 +2,36 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <title>BROADWAY CINEMAS - 百老匯影城</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/global.min.css" />
-  <link rel="stylesheet" href="css/page.min.css" />
+<meta charset="UTF-8" />
+<title>Broadway Cinemas - 百老匯影城</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+<meta name="author" content="	Broadway百老匯影城">
+<meta name="copyright" content="Copyright© 2022 Broadway Cinemas All Rights Reserved.">
+<meta name="distribution" content="Taiwan">
+<meta name="rating" content="General">
+<meta name="keywords" content="電影,百老匯影城,影城">
+<meta name="description"
+  content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+<meta name="url" content="">
+<link rel="canonical" href="">
+<meta property="og:url" content="">
+<meta property="og:image" content="image/favicon.png">
+<meta property="og:image:width" content="1000">
+<meta property="og:image:height" content="523">
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="Broadway百老匯影城">
+<meta property="og:title" content="Broadway百老匯影城">
+<meta property="og:description"
+  content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
+<link rel="apple-touch-icon" sizes="180x180" href="image/favicon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+<link rel="stylesheet" href="css/global.min.css" />
+<link rel="stylesheet" href="css/page.min.css" />
 
 </head>
 
@@ -115,16 +138,17 @@
             <span class="checkmark"></span>
           </label>
         </div>
-
         <div class="actions">
-          <button type="button" class="back actions-btn"><span class="material-icons">
-              west
-            </span>BACK</button>
-          <button type="button" class="next actions-btn">CHECKOUT<span class="material-icons">
-            attach_money
-          </span></button>
+          <a href="book-step3.html" class="back actions-btn">
+            <span class="material-icons">west</span>BACK
+          </a>
+          <a href="book-step4.html" class="next actions-btn">
+            CHECKOUT<span class="material-icons">
+              attach_money
+            </span>
+          </a>
         </div>
-       
+      
       </div>
     </section>
   </main>
