--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>BROADWAY CINEMAS - 百老匯影城 - 關於影城</title>
+  <title>Broadway Cinemas - 百老匯影城</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <meta name="author" content="	Broadway百老匯影城">
   <meta name="copyright" content="Copyright© 2022 Broadway Cinemas All Rights Reserved.">
@@ -30,7 +30,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="image/favicon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="image/favicon.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
   <link rel="stylesheet" href="css/global.min.css" />
   <link rel="stylesheet" href="css/page.min.css" />
 </head>
