--- a/group-ticket.html
+++ b/group-ticket.html
@@ -22,6 +22,7 @@
 <meta property="og:title" content="Broadway百老匯影城">
 <meta property="og:description"
   content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+<meta name="theme-color" content="#282828">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 <meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
