--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta property="og:title" content="Broadway百老匯影城">
   <meta property="og:description"
     content="百老匯影城於2016年底重新裝修，目前擁有11個放映廳，11個放映廳全部升級 Dolby7.1 聲道，1.2.5.7.10.11廳升級為商務廳配備沙發座椅，並於第一排安排了電動座椅，影城全享均一價，觀賞商務廳不須加價。11個放映廳精選首輪商業及藝術電影，歡迎您來體驗。">
+  <meta name="theme-color" content="#282828">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Broadway百老匯影城">
@@ -103,7 +104,7 @@
           <div class="state s-font recommand">影城推薦</div>
           <a href="movie-info.html">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
+              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
             </div>
             <div class="movie-title">
               <p class="l-font ellipsis">劫命救護</p>
@@ -117,7 +118,7 @@
           <div class="state s-font newin">最新上映</div>
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
+              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
@@ -131,7 +132,7 @@
           <div class="state s-font hottest">票房第一</div>
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
+              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
@@ -144,7 +145,7 @@
         <div class="showing-list row-2">
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
+              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
@@ -157,7 +158,7 @@
         <div class="showing-list row-2">
           <a href="">
             <div class="poster">
-              <img src="https://fakeimg.pl/250x350/" alt="" />
+              <img src="https://fakeimg.pl/250x350/" alt="movie-name" />
             </div>
             <div class="movie-title l-font mul-ellipsis-1">
               <p class="l-font ellipsis">劫命救護</p>
@@ -219,7 +220,7 @@
           </div>
           <div class="news-box">
             <a href="#">
-              <img src="https://fakeimg.pl/250x200/" />
+              <img src="https://fakeimg.pl/250x200/" alt="event-name"/>
               <div class="new-info">
                 <p class="sub-title">
                   看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
@@ -233,7 +234,7 @@
             </a>
 
             <a href="#">
-              <img src="https://fakeimg.pl/250x200/" />
+              <img src="https://fakeimg.pl/250x200/" alt="event-name"/>
               <div class="new-info">
                 <p class="sub-title">
                   看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報看指定電影送限定海報
