--- a/news-info.html
+++ b/news-info.html
@@ -44,7 +44,7 @@
     <section class="section">
       <div class="content news-info">
         <div class="actions">
-          <div class="actions-btn"><a href="news.html" class="back">回上頁列表</a></div>
+          <a href="news.html" class="prev actions-btn">回上頁列表</a>
           <p>2022.08.12</p>
         </div>
         <div class="content-row">
